Made things prettier

--- a/client/styles.css
+++ b/client/styles.css
@@ -1,3 +1,30 @@
 body{
   background-color: #fff;
 }
+
+body > div {
+  width: 500px;
+  margin: 0 auto;
+}
+
+audio {
+  width: 500px;
+}
+
+th {
+  width: 300px;
+  text-align: center;
+}
+
+h4{
+  text-align: center;
+}
+
+.playcount {
+  float: right;
+}
+
+button {
+  background: transparent;
+  border: 0px;
+}
